# headless_sensor_node

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
app/: state_machine.cpp  state_machine.h
core/: boot.cpp  boot.h  runtime.cpp  runtime.h
main/: CMakeLists.txt  headless_node.cpp
services/: config_store.cpp  config_store.h  event_queue.cpp  event_queue.h  logger.cpp  logger.h  watchdog.cpp  watchdog.h
